--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "symfony/yaml": "~2.0|~3.0|~4.0|~5.0"
-    },
-    "require-dev": {
-        "illuminate/support": "~5.0|~6.0|~7.0",
-        "phpunit/phpunit": "4.*|5.*",
-        "mockery/mockery": "0.9.3",
-        "scrutinizer/ocular": "^1.1"
+        "php": ">=5.3.0"
     },
     "autoload": {
         "psr-4": {
